--- a/SeleniumBasics/packages.config
+++ b/SeleniumBasics/packages.config
@@ -3,6 +3,7 @@
   <package id="Ghpr.Core" version="0.8.0" targetFramework="net461" />
   <package id="Ghpr.NUnit" version="0.8.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="11.0.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
@@ -21,4 +22,6 @@
   <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
   <package id="Shouldly" version="2.8.3" targetFramework="net461" />
+  <package id="TeamCity.ServiceMessages" version="3.0.10" targetFramework="net461" />
+  <package id="TeamCity.VSTest.TestAdapter" version="1.0.6" targetFramework="net461" />
 </packages>
