--- a/SeleniumBasics/packages.config
+++ b/SeleniumBasics/packages.config
@@ -16,6 +16,7 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
+  <package id="partcovernet4" version="4.0.0.0" targetFramework="net461" />
   <package id="ReportUnit" version="1.2.1" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="2.33" targetFramework="net461" />
   <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
