xml folder added to store the TEST RUN xml reports

--- a/SeleniumBasics/SeleniumBasics.csproj
+++ b/SeleniumBasics/SeleniumBasics.csproj
@@ -106,7 +106,9 @@
     </None>
     <None Include="Reports\RunTests.bat" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Reports\xml\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Logs\TestLogger.log" />
   </ItemGroup>
