--- a/SeleniumBasics/packages.config
+++ b/SeleniumBasics/packages.config
@@ -1,10 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Allure.Commons" version="2.2.0.7" targetFramework="net461" />
   <package id="Ghpr.Core" version="0.8.0" targetFramework="net461" />
   <package id="Ghpr.NUnit" version="0.8.0" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
+  <package id="MimeTypesMap" version="1.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="NUnit.Allure" version="0.2.1" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.Engine" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net461" />
@@ -15,5 +26,6 @@
   <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
   <package id="Shouldly" version="2.8.3" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
   <package id="TeamCity.ServiceMessages" version="3.0.10" targetFramework="net461" />
 </packages>
