--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: csharp
 solution: SeleniumBasics.sln
+mono: latest
+script: 
+  xbuild /p:Configuration=Release SeleniumBasics.sln
+  mono ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./SeleniumBasics/bin/Release/SeleniumBasics.dll
