--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: csharp
 solution: SeleniumBasics.sln
 mono: latest
 script: 
-  xbuild /p:Configuration=Release SeleniumBasics.sln
-  mono ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./SeleniumBasics/bin/Release/SeleniumBasics.dll
+  - msbuild /p:Configuration=Release SeleniumBasics.sln
+  - mono ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./SeleniumBasics/bin/Release/SeleniumBasics.dll
