--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: csharp
 solution: SeleniumBasics.sln
 dotnet: 1.1.5
 script: 
-  - msbuild /p:Configuration=Release SeleniumBasics.sln
+  - dotnet build /p:Configuration=Release SeleniumBasics.sln
   - dotnet ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./SeleniumBasics/bin/Release/SeleniumBasics.dll
