--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: csharp
 solution: SeleniumBasics.sln
-dotnet: 1.1.5
+notifications:
+  slack: de-labs:Sch4Zt9sxr8XiPi7ltIFSm5p
+mono: latest
 script: 
-  - dotnet build /p:Configuration=Release SeleniumBasics.sln
-  - dotnet ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./SeleniumBasics/bin/Release/SeleniumBasics.dll
- notifications:
-    slack: de-labs:Sch4Zt9sxr8XiPi7ltIFSm5p
+  - msbuild build /p:Configuration=Release SeleniumBasics.sln
+  - mono ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./SeleniumBasics/bin/Release/SeleniumBasics.dll
